--- a/wode.html
+++ b/wode.html
@@ -13,20 +13,20 @@
 </head>
 <body>
     <div>
-            <img src="/img/13.png" alt="" width="100%" height="150">
+          <a href="/bianji.html"><img src="/img/13.png" alt="" width="100%" height="150"></a>  
     </div>
      <div  width="100%" height="150">
             <ul class="list-group" >
-              <li class="list-group-item ">钱包</li>
-              <li class="list-group-item">我订阅的主播</li>
-              <li class="list-group-item">我的粉丝（30005）</li>
-              <li class="list-group-item">我看过的</li>
-              <li class="list-group-item">五五开贵族</li>
-              <li class="list-group-item">我要充值</li>
-              <li class="list-group-item">任务中心</li>
-              <li class="list-group-item">我要开播</li>
-              <li class="list-group-item">帮助与反馈</li>
-              <li class="list-group-item">设置</li>
+              <li class="list-group-item "><a  href="/qianbao.html" style="color: black;">钱包</a></li>
+              <li class="list-group-item"><a  href="" style="color: black;">我订阅的主播</a></li>
+              <li class="list-group-item"><a  href="/fensi.html" style="color: black;">我的粉丝（1）</a></li>
+              <li class="list-group-item"><a  href="" style="color: black;">我看过的</a></li>
+              <li class="list-group-item"><a  href="" style="color: black;">五五开贵族</a></li>
+              <li class="list-group-item"><a  href="" style="color: black;">我要充值</a></li>
+              <li class="list-group-item"><a  href="" style="color: black;">任务中心</a></li>
+              <li class="list-group-item"><a  href="" style="color: black;">我要开播</a></li>
+              <li class="list-group-item"><a  href="" style="color: black;">帮助与反馈</a></li>
+              <li class="list-group-item"><a  href="" style="color: black;">设置</a></li>
             </ul>
           </div>
         
